--- a/index.html
+++ b/index.html
@@ -1,5 +1,25 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<title>Redirecting to Mussum Senac RS</title>
-<meta http-equiv="refresh" content="0; URL=http://177.101.203.139/">
-<link rel="canonical" href="http://177.101.203.139/">
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mussum Senac</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+        }
+        iframe {
+            border: none;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
+</head>
+<body>
+    <iframe src="http://177.101.203.139"></iframe>
+</body>
+</html>
+
