--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mussum Senac</title>
+    <title>UniSenac - Campus Pelotas
+Curso Superior de Tecnologia em Redes de Computadores</title>
     <style>
         body, html {
             margin: 0;
