--- a/index.html
+++ b/index.html
@@ -1,26 +1,4 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UniSenac - Campus Pelotas
-Curso Superior de Tecnologia em Redes de Computadores</title>
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            overflow: hidden;
-        }
-        iframe {
-            border: none;
-            width: 100%;
-            height: 100%;
-        }
-    </style>
-</head>
-<body>
-    <iframe src="https://mussum-senacrs.vercel.app/"></iframe>
-</body>
-</html>
-
+<meta charset="utf-8">
+<meta http-equiv="refresh" content="0; URL=https://mussum-senacrs.vercel.app">
+<link rel="canonical" href="https://mussum-senacrs.vercel.app">
